fixed image squish on homepage

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,7 +30,7 @@ header{
 }
 .jumbotron{
     background-image: url(../assets/lucas-andrade-M8uBaLEyGV4-unsplash.jpg);
-    background-size: 1800px 800px;
+    background-size: 1800px 1200px;
     background-position: center;
     height: 500px;
 }
